# ScreenLed

./: .gitignore  README.md  pc.py  raspb.py
ScreenLedGUI/: CMakeLists.txt  consts.h  main.cpp  screenledgui.cpp  screenledgui.h  screenledgui.ui
ScreenLedLib/: CMakeLists.txt  Commons.h  ScreenCapBase.cpp  ScreenCapBase.h  ScreenCapLinux.cpp  ScreenCapLinux.h  ScreenCapWindows.cpp  ScreenCapWindows.h  ScreenLedLib.cpp  ScreenLedLib.h  algomean.cpp  algomean.h  algomedian.cpp  algomedian.h
VideoCapture2LED/: CMakeLists.txt  README.md  config.json  configurator.cpp  configurator.h  defs.h  main.cpp
pc/: gui.py  pc.py  pc_multithread.py  preprocess_videoplayer.py
pc_c++/: CMakeLists.txt  analyzer.cpp  analyzer.h  configurator.cpp  configurator.h  gConfig.json  iConfig.json  main.cpp  pc_c++.sln  pc_c++.vcxproj  pc_c++.vcxproj.filters
pc_c++_preprocess/: CMakeLists.txt  main.cpp
pc_c++_preprocess/cpp_vlc_preprocess_player/: CMakeLists.txt  UIUpdateWorker.h  VLCWidget.cpp  VLCWidget.h  main.cpp  preprocessplayer.cpp  preprocessplayer.h  preprocessplayer.ui  udpworker.cpp  udpworker.h  vlcplayer.cpp  vlcplayer.h
raspb_cpp_rcv/: led_rcv.cpp  led_server  readme.md
raspberry/: raspb.py  raspb_cpp.py  raspb_cpp_series.py
tools/: dummy_receiver.py  preprocess_video.py
